--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noLib": false,
     "lib": ["dom.iterable", "es2017"],
     "sourceMap": true,
+    "declaration": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "strict": true,
