--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 
   "devDependencies": {
     "typescript": "latest",
+    "tslint": "latest",
 
     "@types/react": "latest",
     "@types/react-dom": "latest",
