--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:watch": "webpack -d --env.development --watch",
 
     "prepare": "tsc",
+    "prepublishOnly": "npm run test",
 
     "pretest": "npm run clean && tsc || true",
     "test": "node --trace-warnings node_modules/.bin/jest --no-cache",
