--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "prepublishOnly": "npm run test",
 
     "pretest": "npm run clean && tsc || true",
-    "test": "node --trace-warnings node_modules/.bin/jest --no-cache",
+    "test": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage",
     "pretest:silent": "npm run pretest",
-    "test:silent": "node --trace-warnings node_modules/.bin/jest --no-cache --silent"
+    "test:silent": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage --silent"
   },
 
   "dependencies": {
