--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
 
   "dependencies": {
     "react": "latest",
+    "@types/react": "latest",
+
     "prop-types": "latest",
-    "react-dom": "latest"
+    "@types/prop-types": "latest",
+
+    "react-dom": "latest",
+    "@types/react-dom": "latest"
   },
 
   "devDependencies": {
     "typescript": "latest",
     "tslint": "latest",
-
-    "@types/react": "latest",
-    "@types/prop-types": "latest",
-    "@types/react-dom": "latest",
 
     "browserify": "latest",
 
