Remove codecov, could not make it work
See no-reports-generated error although Travis CI seems OK https://github.com/codecov/support/issues/411

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "prepublishOnly": "npm run test",
 
     "pretest": "npm run clean && tsc || true",
-    "test": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage && codecov",
-    "pretest:silent": "npm run pretest",
-    "test:silent": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage --silent && codecov"
+    "test": "node --trace-warnings node_modules/.bin/jest --no-cache",
+    "precoverage": "npm run pretest",
+    "coverage": "node --trace-warnings node_modules/.bin/jest --no-cache --coverage"
   },
 
   "dependencies": {
@@ -63,8 +63,6 @@
 
     "enzyme": "latest",
     "@types/enzyme": "latest",
-    "react-test-renderer": "latest",
-
-    "codecov": "latest"
+    "react-test-renderer": "latest"
   }
 }
