--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,7 @@
       "args": ["--runInBand", "--no-cache"],
       "cwd": "${workspaceRoot}",
       "runtimeArgs": [
-        "--nolazy", // See What does the Node.js `--nolazy` flag mean? http://stackoverflow.com/q/21534565/990356
-        "--harmony"
+        "--nolazy" // See What does the Node.js `--nolazy` flag mean? http://stackoverflow.com/q/21534565/990356
       ],
       "env": {
         "NODE_ENV": "development"
