--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "declaration": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": false,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -22,6 +22,8 @@
   ],
 
   "include": [
+    "src/*.test.ts",
     "src/*.test.tsx"
+    //,"examples/**/*.tsx" // FIXME Remove this otherwise it fucks the lib outDir structure
   ]
 }
