Generate ES5 code by default

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es5",
+    "downlevelIteration": true,
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
