Use Rollup to generate the minified and compressed UMD file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ build/
 lib/
 dist/
 coverage/
+
+# rollup-plugin-typescript2
+# See .rpt2_cache should be in /tmp https://github.com/ezolenko/rollup-plugin-typescript2/issues/34
+.rpt2_cache/
