--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "scripts": {
     "clean": "del-cli build lib dist/* !dist/.gitkeep coverage .rpt2_cache",
 
-    "dist:webpack": "cross-env NODE_ENV=development webpack -d --config webpack.dist.config.ts || true && cross-env NODE_ENV=production webpack -p --config webpack.dist.config.ts || true",
-    "dist:rollup": "cross-env NODE_ENV=development rollup --config && cross-env NODE_ENV=production rollup --config",
-    "dist": "npm run dist:rollup",
+    "dist": "cross-env NODE_ENV=development rollup --config && cross-env NODE_ENV=production rollup --config",
 
     "build": "webpack -d || true",
     "build:watch": "webpack -d --watch",
