--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,9 @@
 
   "files": [
     "src/index.ts",
-    "src/Bootstrap4.tsx",
-    "src/Enzyme.ts"
+    "src/Enzyme.ts",
+    "src/DisplayFields.tsx",
+    "src/Bootstrap4.tsx"
   ],
 
   "include": [
