--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "node",
     "noLib": false,
     "lib": ["dom.iterable", "es2017"],
+    "experimentalDecorators": true,
     "sourceMap": true,
     "declaration": true,
     "noUnusedLocals": true,
