Switch React Native example to TypeScript thanks to https://github.com/dalcib/expo-ts-example
See https://github.com/react-community/create-react-native-app/issues/87

--- a/examples/ReactNative/package.json
+++ b/examples/ReactNative/package.json
@@ -2,12 +2,9 @@
   "name": "react-native-example",
   "version": "1.0.0",
   "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.6.0",
-    "jest-expo": "^22.0.0",
-    "react-test-renderer": "16.0.0-beta.5"
-  },
+
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+
   "scripts": {
     "start": "react-native-scripts start",
     "eject": "react-native-scripts eject",
@@ -15,12 +12,32 @@
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
+
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo-ts"
   },
+
   "dependencies": {
     "expo": "^22.0.0",
+
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5"
+  },
+
+  "devDependencies": {
+    "typescript": "latest",
+
+    "@types/react": "latest",
+    "@types/react-native": "latest",
+
+    "react-native-scripts": "1.6.0",
+    "react-native-typescript-transformer": "latest",
+
+    "@types/jest": "latest",
+    "jest-expo": "^22.0.0",
+    "jest-expo-ts": "latest",
+
+    "react-test-renderer": "16.0.0-beta.5",
+    "@types/react-test-renderer": "latest"
   }
 }
