--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files": [
+    "dist/",
+    "lib/"
+  ],
 
   "scripts": {
     "clean": "del-cli build lib dist/* !dist/.gitkeep coverage .rpt2_cache",
