--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,6 @@
   "lerna": "2.5.1",
   "version": "0.7.0",
   "npmClient": "yarn",
+  "registry": "https://registry.npmjs.org/",
   "useWorkspaces": true
 }
