Add API 'react-form-with-constraints-bootstrap4/lib/Enzyme'

--- a/packages/react-form-with-constraints-bootstrap4/tsconfig.json
+++ b/packages/react-form-with-constraints-bootstrap4/tsconfig.json
@@ -4,7 +4,8 @@
   // List everything so that vscode displays the "problems" for everything
 
   "files": [
-    "src/index.ts"
+    "src/index.ts",
+    "src/Enzyme.ts"
   ],
 
   "include": [
