--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,14 @@
 {
   "lerna": "2.5.1",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "npmClient": "yarn",
   "registry": "https://registry.npmjs.org/",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "commands": {
+    "publish": {
+      "ignore": [
+        "*-example"
+      ]
+    }
+  }
 }
