--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "clean:lerna": "lerna clean",
     "clean:node_modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name 'yarn.lock' -exec rm -f '{}' +",
 
-    "clean": "lerna run clean",
+    "clean": "rm -f lerna-debug.log && lerna run clean",
 
     "clean:all": "yarn clean && yarn clean:lerna && yarn clean:node_modules",
 
