--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,16 @@
       "cwd": "${workspaceRoot}/packages/react-form-with-constraints-bootstrap4",
       "runtimeArgs": ["--nolazy"],
       "env": {"NODE_ENV": "development"}
+    },
+    {
+      "name": "Jest react-form-with-constraints-native",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/packages/react-form-with-constraints-native/node_modules/.bin/jest",
+      "args": ["--runInBand", "--no-cache"],
+      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-native",
+      "runtimeArgs": ["--nolazy"],
+      "env": {"NODE_ENV": "development"}
     }
   ]
 }
