Enable the source maps for the dependencies
See How to load library source maps using webpack? https://stackoverflow.com/a/32749125/990356

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -29,6 +29,7 @@
     "babel-core": "latest",
     "babel-preset-react": "latest",
     "file-loader": "latest",
+    "source-map-loader": "latest",
 
     "del-cli": "latest",
     "cross-env": "latest"
