--- a/examples/ClubMembers/package.json
+++ b/examples/ClubMembers/package.json
@@ -34,6 +34,7 @@
     "@types/webpack": "latest",
     "ts-loader": "^3",
     "file-loader": "latest",
+    "source-map-loader": "latest",
 
     "del-cli": "latest",
     "cross-env": "latest"
