Add "Jest react-form-with-constraints-tools" vscode debug target

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,16 @@
       "cwd": "${workspaceRoot}/packages/react-form-with-constraints-native",
       "runtimeArgs": ["--nolazy"],
       "env": {"NODE_ENV": "development"}
+    },
+    {
+      "name": "Jest react-form-with-constraints-tools",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/packages/react-form-with-constraints-tools/node_modules/.bin/jest",
+      "args": ["--runInBand", "--no-cache"],
+      "cwd": "${workspaceRoot}/packages/react-form-with-constraints-tools",
+      "runtimeArgs": ["--nolazy"],
+      "env": {"NODE_ENV": "development"}
     }
   ]
 }
