Lerna publish task

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test": "lerna run test --stream",
     "coverage": "lerna run coverage --stream",
 
-    "tslint": "tslint --config tslint.json '**/*.ts{,x}' --exclude '**/node_modules/**' --exclude '**/lib/**'"
+    "tslint": "tslint --config tslint.json '**/*.ts{,x}' --exclude '**/node_modules/**' --exclude '**/lib/**'",
+
+    "publish:lerna": "lerna publish --npm-tag=next --skip-git # Custom example: 0.8.0-beta.1"
   },
 
   "workspaces": [
