--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -16,6 +16,7 @@
 
     "react-form-with-constraints": "^0.7.0",
     "react-form-with-constraints-bootstrap4": "^0.7.0",
+    "react-form-with-constraints-tools": "^0.7.0",
 
     "bootstrap": "latest",
     "node-sass": "latest",
@@ -27,6 +28,8 @@
     "webpack": "^3",
     "babel-loader": "latest",
     "babel-core": "latest",
+    "babel-polyfill": "latest",
+    "babel-preset-env": "latest",
     "babel-preset-react": "latest",
     "file-loader": "latest",
     "source-map-loader": "latest",
