Use sourceMap: true with webpack/ts-loader and inlineSourceMap: true with tsc to support source maps with CodeSandbox
ts-loader and friends don't play nice with inlineSourceMap: true
See Error when using inline sourcemaps https://github.com/s-panferov/awesome-typescript-loader/issues/171

--- a/packages/react-form-with-constraints-bootstrap4/tsconfig.lib.json
+++ b/packages/react-form-with-constraints-bootstrap4/tsconfig.lib.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "noEmit": false,
-    "outDir": "lib"
+    "outDir": "lib",
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "declaration": true
   },
   "include": []
 }
