--- a/packages/react-form-with-constraints-tools/tsconfig.lib.json
+++ b/packages/react-form-with-constraints-tools/tsconfig.lib.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "noEmit": false,
-    "outDir": "lib"
+    "outDir": "lib",
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "declaration": true
   },
   "include": []
 }
