Remove .bind(this) + move this.state = ... to simply state inside the class component
See Where to Initialize State in React https://daveceddia.com/where-initialize-state-react/

--- a/examples/Bootstrap4/package.json
+++ b/examples/Bootstrap4/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "latest",
     "babel-core": "latest",
     "babel-polyfill": "latest",
+    "babel-plugin-transform-class-properties": "latest",
     "raf": "latest",
     "babel-preset-env": "latest",
     "babel-preset-react": "latest",
